# swatplus

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GitHub.md  README.md  basin_print_codes_read copy.f90  build.txt  build_output.txt  code_of_conduct.md  coding_conventions.md  fdoc.ml  ford.md.in  spdoc.md.in  sub_dict.txt  swatbuild.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  doc.yml  test.yml
MODEL_DEB_Priego/: HQ.tmp  STA1.tmp  STA14.tmp  STA17.tmp  STA23.tmp  STA6.tmp  WG_WS2.pcp  aqu_catunit.ele  aquifer.aqu  aquifer.con  aquifer_aa.txt  basin_crop_yld_yr.txt  basin_totc.txt  basin_wb_yr.txt  bmpuser.str  cal_parms.cal  calibration_1958_65.cal  calibration_2000_09.cal  ch_budget.txt  ch_order_sed.txt  ch_sedbud.txt  chandeg.con  channel-lte.cha  channel_sd_aa.txt  channel_sdmorph_aa.txt  chem_app.ops  cntable.lum  codes.bsn  cons_practice.lum  crop_yld_aa.txt  fertilizer.frt  field.fld  file.cio  filterstrip.str  fire.ops  fort.7777  fort.7778  grassedww.str  graze.ops  harv.ops  (+46 more)
MODEL_DEB_Priego/SWIFT/: aqu_dr.swf  aquifer.con  chan_dat.swf  chan_dr.swf  chandeg.con  file_cio.swf  hru.con  hru_dat.swf  hru_exco.swf  hru_wet.swf  ls_unit.def  ls_unit.ele  object.cnt  precip.swf  res_dat.swf  res_dr.swf  rout_unit.con  rout_unit.def  rout_unit.ele
analysis/: swat_calltree.py
data/: hru-data.hru
data/Ames_sub1/: .testfiles.txt  basin_aqu_aa.txt  basin_carbon_all.txt  basin_cha_aa.txt  basin_crop_yld_aa.txt  basin_crop_yld_yr.txt  basin_ls_aa.txt  basin_nb_aa.txt  basin_psc_aa.txt  basin_pw_aa.txt  basin_res_aa.txt  basin_sd_cha_aa.txt  basin_sd_chamorph_aa.txt  basin_sd_chanbud_aa.txt  basin_totc.txt  basin_wb_aa.txt  carb_coefs.cbn  carbon_coef.cbn  carbon_water_coef.cbn  checker.out  codes.bsn  crop_yld_aa.txt  crop_yld_yr.txt  deposition_aa.txt  erosion.out  fertilizer.frt  file.cio  files_out.out  filterstrip.str  fort.7777  hru-data.hru  hru.con  hru_cbn_lyr.txt  hru_ls_aa.txt  hru_nb_aa.txt  hru_ncycle_aa.txt  hru_nut_carb_gl_aa.txt  hru_orgc.txt  hru_plc_stat.txt  hru_plcarb_aa.txt  (+31 more)
data/Osu_1hru/: Imsiltmp.tmp  Imsilwind.wnd  aqu_dr.swf  aquifer.aqu  aquifer.con  aquifer_aa.txt  basin_aqu_aa.txt  basin_carbon_all.txt  basin_cha_aa.txt  basin_crop_yld_aa.txt  basin_ls_aa.txt  basin_nb_aa.txt  basin_psc_aa.txt  basin_pw_aa.txt  basin_sd_cha_aa.txt  basin_sd_chamorph_aa.txt  basin_sd_chanbud_aa.txt  basin_totc.txt  basin_wb_aa.txt  basin_wb_yr.txt  bmpuser.str  cal_parms.cal  calibration.cal  chandeg.con  channel-lte.cha  channel_sd_aa.txt  channel_sd_day.txt  channel_sdmorph_aa.txt  cntable.lum  deposition_aa.txt  filterstrip.str  fort.7777  fort.7778  hru_dat.swf  hru_ls_aa.txt  hru_nb_aa.txt  hru_ncycle_aa.txt  hru_nut_carb_gl_aa.txt  hru_orgc.txt  hru_plcarb_aa.txt  (+40 more)
data/TxtInOut_Osu_1hru/: __warnings.txt  chan_dr.swf  crop_yld_aa.txt  paddy_daily.csv  paddy_test.xlsx  print.prt  recall.rec  singi_obs_q1_colnam.csv  tiledrain.str
data/netCDF-climate/: aqu_catunit.ele  aquifer.aqu  aquifer.con  bmpuser.str  cal_parms.cal  chandeg.con  channel-lte.cha  chem_app.ops  cntable.lum  codes.bsn  cons_practice.lum  fertilizer.frt  field.fld  file.cio  filterstrip.str  fire.ops  fort.7777  fort.7778  grassedww.str  graze.ops  harv.ops  hru-data.hru  hru.con  hyd-sed-lte.cha  hydrology.hyd  hydrology.res  hydrology.wet  initial.aqu  initial.cha  initial.res  irr.ops  landuse.lum  ls_unit.def  ls_unit.ele  lum.dtl  management.sch  ncview.dump  netcdf.ncw  nutrients.cha  nutrients.res  (+28 more)
doc/: Building.md  Burning.md  Swatplus_workshop_agenda.md  Tagging.md  Testing.md  VS-Win.md  VS.md  VSCode_Codespace.md  coding_conventions.md  devworkshop_greece_2026.md  out_no3_explanation.md  out_no3_quick_summary.md  swatplus_call_tree.md  swatplus_sub_flow.md
docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.devenv.debian  entrypoint.sh  entrypoint_alpine.sh
jupyter_notebooks/: carbon.ipynb  full_carbon.ipynb  workshop_carbon.ipynb
refdata/: landuse.lum
refdata/Ames_sub1/: ames.pcp  ames.tem  basin_aqu_aa.txt  basin_carbon_aa.txt  basin_carbon_all.txt  basin_crop_yld_aa.txt  basin_pw_aa.txt  basin_sd_cha_aa.txt  basin_sd_chanbud_aa.txt  carb_coefs.cbn  carbon.bsn  carbon_lyr.bsn  cntable.lum  co2.out  codes.bsn  cons_practice.lum  crop_yld_aa.txt  diagnostics.out  file.cio  grassedww.str  graze.ops  harv.ops  hru-data.hru  hru.con  hru_carbon_aa.txt  hru_nb_aa.txt  hru_plc_stat.txt  hru_plcarb_aa.txt  hru_scf_aa.txt  hru_soilcarb_aa.txt  hydout_aa.txt  hydrology.hyd  landuse.lum  ls_unit.ele  management(CTcorn).sch  management.sch  manure_db.frt  manure_om.frt  parameters.bsn  pcp.cli  (+13 more)
refdata/IA-Clayton_Test_Case/: READ.me.txt  carb_coefs.cbn  chem_app.ops  cntable.lum  codes.bsn  cons_practice.lum  fertilizer.frt  file.cio  filterstrip.str  fire.ops  graze.ops  harv.ops  hru-data.hru  hru.con  hydrology.hyd  irr.ops  landuse.lum  ls_unit.ele  lum.dtl  management.sch  manure_db.frt  manure_om.frt  nutrients.sol  object.cnt  ovn_table.lum  parameters.bsn  pesticide.pes  pesticide.pes.herbi  plant.ini  plants.plt  print.prt  snow.sno  soil_lyr_depths.sol  (+14 more)
src/: NCsed_leach.f90  NP_flow.F90  actions.f90  albedo.f90  allocate_parms.f90  animal_herd_module.f90  aqu2d_init.f90  aqu2d_read.f90  aqu_1d_control.f90  aqu_cs_output.f90  aqu_hyds.f90  aqu_initial.f90  aqu_pest_output_init.f90  aqu_pesticide_module.f90  aqu_pesticide_output.f90  aqu_read.f90  aqu_read_elements.f90  aqu_read_init.f90  aqu_read_init_cs.f90  aqu_salt_output.f90  aquifer_module.f90  aquifer_output.f90  ascrv.f90  atri.f90  aunif.f90  basin_aqu_pest_output.f90  basin_aquifer_output.f90  basin_ch_pest_output.f90  basin_chanbud_output.f90  basin_chanmorph_output.f90  basin_channel_output.f90  basin_ls_pest_output.f90  basin_module.f90  basin_output.f90  basin_print_codes_read.f90  basin_prm_default.f90  basin_read_cc.f90  basin_read_objs.f90  basin_read_prm.f90  basin_recall_output.f90  (+709 more)
test/: check.py  check_inputs.py  check_unused_inputs.py  spcheck.py  swat_io_ndiff.py  swat_io_udiff.py  swat_output_to_csv_files.py
(+99 files in other folders)
